Try to fix nav collapse in mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,8 +1,8 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-.navbar {
-  background-color: black !important;
-}
+// .navbar {
+//   background-color: black !important;
+// }
 .nav-link {
   color: white !important;
 }
